assert-struct/tests/snapshots/index_operations__nested_index_mismatch.snap
---
source: assert-struct/tests/index_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/index_operations_errors/nested_index_mismatch.rs:15:23
   |
15 |         matrix[0][1]: 5,  // Should be 2, will fail
   |                       ^ got 2
